--- a/YoutubeAPI/package.json
+++ b/YoutubeAPI/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-icons/core": "^27.5.2",
+    "@ng-icons/heroicons": "^27.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
